--- a/client/client.csproj
+++ b/client/client.csproj
@@ -29,5 +29,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lidgren.Network\Lidgren.Network.csproj" />
+    <ProjectReference Include="..\Util\Util.csproj" />
   </ItemGroup>
 </Project>
